--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactniceresume",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://PriyankaRox.github.io/My-Portfolio",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -10,8 +10,8 @@
     "anix": "^1.3.6",
     "jquery": "^3.6.0",
     "particles-bg": "^2.5.5",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
@@ -19,12 +19,10 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +43,6 @@
     ]
   },
   "devDependencies": {
-    "chokidar": "^3.5.1",
-    "gh-pages": "^6.0.0"
+    "chokidar": "^3.5.1"
   }
 }
