--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactniceresume",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://PriyankaRox.github.io/My-Portfolio-view",
+  "homepage": "https://PriyankaRox.github.io/My-Portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
